--- a/themes/airspace-hugo/layouts/partials/zoho.html
+++ b/themes/airspace-hugo/layouts/partials/zoho.html
@@ -1,131 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-
-
-
-
-
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-
-
-<title>Contact</title>
-
-<meta name="generator" content="Hugo 0.37.1" />
-
-
-<link rel="stylesheet" href="https://carme.ai/css/owl.carousel.css" />
-<link rel="stylesheet" href="https://carme.ai/css/bootstrap.min.css" />
-<link rel="stylesheet" href="https://carme.ai/css/font-awesome.min.css" />
-<link rel="stylesheet" href="https://carme.ai/css/airspace-local-fonts.css" />
-<link rel="stylesheet" href="https://carme.ai/css/airspace.css" />
-<link rel="stylesheet" href="https://carme.ai/css/style.css" />
-<link rel="stylesheet" href="https://carme.ai/css/ionicons.min.css" />
-<link rel="stylesheet" href="https://carme.ai/css/animate.css" />
-<link rel="stylesheet" href="https://carme.ai/css/responsive.css" />
-<link rel="stylesheet" href="https://carme.ai/css/syntax.css" />
-
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="https://carme.ai/js/bootstrap.min.js"></script>
-<script src="https://carme.ai/js/owl.carousel.min.js"></script>
-<script src="https://carme.ai/js/plugins.js"></script>
-<script src="https://carme.ai/js/min/waypoints.min.js"></script>
-<script src="https://carme.ai/js/jquery.counterup.js"></script>
-
-
-<script src="https://carme.ai/js/main.js"></script>
-
-
-
-</head>
-<body>
-
-	
-<header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="https://carme.ai/">
-              <img src="https://carme.ai/img/logo.png" alt="Carme.ai Logo">
-            </a>
-          </div>
-            
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://carme.ai/">Home</a></li>
-              
-                <li><a href="http://docs.carme.ai/">Docs</a></li>
-              
-                <li><a href="/blog/">Tutorials</a></li>
-              
-                <li><a href="https://github.com/CarmeLabs/carme/">Star on Github</a></li>
-              
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </div>
-</header>
-
-	
-	
-		
-<section id="global-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h1>Contact us. </h1>
-          <p>Stay in touch for latest developments.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-<section id="contact-form">
-  <div class="container">
-
-    
+<!--Zoho Campaigns Web-Optin Form's Header Code Starts Here-->
 
 <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 <link href="https://zcs1.maillist-manage.com/css/ui.theme.css" rel="stylesheet" type="text/css" />
@@ -146,13 +19,13 @@ $ZC(document).ready( function($) {
 $ZC("#zc_trackCode").val(trackingText);
 	$ZC("#fieldBorder").val($ZC("[changeItem='SIGNUP_FORM_FIELD']").css("border-color"));
 	_setOptin(false,function(th){
-	 
+	/*Before submit, if you want to trigger your event, "include your code here"*/
 });
 
- 
+/*Load Captcha For this*/
 
 
-  
+ /*Tracking Enabled*/
  trackSignupEvent(trackingText);
  });
 </script>
@@ -165,7 +38,7 @@ box-sizing: border-box !important;
 word-break:break-word;
 overflow-wrap: break-word;
 }
- 
+/*** RESPONSIVE START */
 @media only screen and (max-width: 200px){
 [name='SIGNUP_BODY']{
 width:100% !important;
@@ -174,7 +47,7 @@ margin: 0px auto !important;
 padding:0px !important
 }
 }
- 
+/*Major Mobiles*/
 @media screen and (min-width: 320px) and (max-width: 580px) and (orientation : portrait){
 [name='SIGNUP_BODY']{
 max-width:300px !important;
@@ -182,7 +55,7 @@ margin: 0px auto !important;
 padding:0px !important;
 }
 }
- 
+/* iPads*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px){
 [name='SIGNUP_BODY']{
 max-width:500px !important;
@@ -202,11 +75,11 @@ margin: 0px auto !important;
 padding:0px !important;
 }
 }
- 
+/*** RESPONSIVE END */
 
 </style>
 
-
+<!--Zoho Campaigns Web-Optin Form's Header Code Ends Here--><!--Zoho Campaigns Web-Optin Form Starts Here-->
 
 <div id="customForm">
 	<input type="hidden" id="signupFormType" value="QuickForm_Vertical">
@@ -234,18 +107,18 @@ padding:0px !important;
 								</div>
 							</div>
 							<form method="POST" id="zcampaignOptinForm" style="margin:0px;" action="https://zcs1.maillist-manage.com/campaigns/weboptin.zc" target="_zcSignup">
-								<div style="display:none;background-color:#FFEBE8;padding:10px 10px; color:#d20000; font-size:11px; margin:10px;border:solid 1px #ffd9d3; margin-top:20px;" id="errorMsgDiv">&nbsp;&nbsp;Please correct the marked field(s) below.</div>
+								<div style="display:none;background-color:#FFEBE8;padding:10px 10px; color:#d20000; font-size:11px; margin:10px;border:solid 1px #ffd9d3; margin-top:20px;" id="errorMsgDiv">&nbsp;&nbsp;Please correct the marked field(s) below.</div><!-- check to mark emailid field as type email, and other mandatory fields as type required -->
 								<div style="padding-left:15px; padding-right:15px;padding-bottom:15px; padding-top:15px;">
 									<input name="CONTACT_EMAIL" changetype="CONTACT_EMAIL" changeitem="SIGNUP_FORM_FIELD" type="email" required="true" id="CONTACT_EMAIL" style="width: 100%; color: rgb(136, 136, 136); background-color: rgb(255, 255, 255); text-indent: 5px; height: 30px; text-align: center; font-family: Arial; box-sizing: border-box; border-top-left-radius: 0px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; padding: 2px; font-size: 12px; border: 1px solid rgb(235, 235, 235);" placeholder="Email">
 									<span style="display:none" id="dt_CONTACT_EMAIL">1,true,6,Subscriber Email,2</span>
-								</div>
+								</div><!-- check to mark emailid field as type email, and other mandatory fields as type required --><!-- check to mark emailid field as type email, and other mandatory fields as type required -->
 								<div style="padding-left:15px; padding-right:15px;padding-bottom:15px; padding-top:15px;">
 									<input name="LASTNAME" changetype="LASTNAME" changeitem="SIGNUP_FORM_FIELD" type="text" id="LASTNAME" style="width: 100%; color: rgb(136, 136, 136); background-color: rgb(255, 255, 255); text-indent: 5px; height: 30px; text-align: center; font-family: Arial; box-sizing: border-box; border-top-left-radius: 0px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; padding: 2px; font-size: 12px; border: 1px solid rgb(235, 235, 235);" placeholder="Name">
 									<span style="display:none" id="dt_LASTNAME">1,false,1,Last Name,2</span>
 								</div>
-								<div style="padding-left:15px; padding-right:15px;padding-bottom:15px;padding-top:5px;">
+								<div style="padding-left:15px; padding-right:15px;padding-bottom:15px;padding-top:5px;"><!--  different elements for view and edit causing errors<input name="SIGNUP_SUBMIT_BUTTON" id="zcWebOptin" type="button" style="text-align:center;-webkit-appearance:none;background-color:#a7a7a7; color:#fff; border:solid 1px #999; font-size:12px; padding:6px 10px; width:50%; cursor:pointer;font-family:Arial;" value="Enter">-->
 									<button name="SIGNUP_SUBMIT_BUTTON" id="zcWebOptin" style="background-color: rgb(255, 97, 97); color: rgb(255, 255, 255); cursor: pointer; width: 50%; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: 1px solid rgb(255, 97, 97); padding: 6px 10px; text-align: center;">Enter</button>
-								</div>
+								</div><!-- Do not edit the below Zoho Campaigns hidden tags -->
 								<input type="hidden" id="fieldBorder" value="rgb(235, 235, 235)">
 								<input type="hidden" id="submitType" name="submitType" value="optinCustomView">
 								<input type="hidden" id="lD" name="lD" value="16342998f8a7bd19">
@@ -261,7 +134,7 @@ padding:0px !important;
 								<input type="hidden" id="new_optin_response_in" value="0">
 								<input type="hidden" id="duplicate_optin_response_in" value="0">
 								<input type="hidden" name="zc_trackCode" id="zc_trackCode" value="" onload="">
-								<input type="hidden" id="zc_formIx" name="zc_formIx" value="404305d75a893b4e36c9940e0fbddf000abda9b180e81eff"></form>
+								<input type="hidden" id="zc_formIx" name="zc_formIx" value="404305d75a893b4e36c9940e0fbddf000abda9b180e81eff"><!-- End of the campaigns hidden tags --></form>
 						</div>
 					</td>
 				</tr>
@@ -278,61 +151,4 @@ padding:0px !important;
 	<div id="zcOptinSuccessPanel"></div>
 </div>
 
-
-
-
-  </div>
-</section>
-
-
-	
-
-	
-		
-
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>Containers increase reproducablity and scalablity, and Carme helps data scientists to use containers.</h2>
-          <p>Working with containers allows your infrastructure to become code [this is often referred to as  or infrastructure as code (IAC)]. This ensures that others will be able to reproduce your work, and the Carme package system makes sharing your work a snap.  Containers are also useful when you want to scale an analysis, perhaps moving from your local machine to a GPU in the cloud or from a single GPU server to a Kubernetes cluster for a classroom Jupyterhub instance.  </p>
-          
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-	
-
-	
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="footer-manu">
-          <ul>
-            
-            <li><a href="#">About us</a></li>
-            
-            <li><a href="#">Contact us</a></li>
-            
-            <li><a href="#">How it works</a></li>
-            
-            <li><a href="#">Tutorials</a></li>
-            
-            <li><a href="#">Terms</a></li>
-            
-          </ul>
-        </div>
-        <p>Copyright &copy; Design &amp; Developed by Themefisher. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
-
-
-	
-</body>
-</html>
+<!--Zoho Campaigns Web-Optin Form Ends Here-->
