--- a/themes/airspace-hugo/layouts/partials/contact.html
+++ b/themes/airspace-hugo/layouts/partials/contact.html
@@ -4,7 +4,7 @@
 {{ with .Site.Params.contact }}
 <section id="contact-form">
   <div class="container">
-
+    <H3>We are still working on our paper describing Carme.  Sign up here and we will send it to you when it is ready and keep you updated on package develoments. (Don't worry, we won't email often.)</H3> 
     {{ partial "zoho.html" .Site.Params.contact }}
 
   </div>
